--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,233 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  font-size: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-family: "Darker Grotesque", sans-serif;
+}
+
+button:hover, a:hover{
+  cursor: pointer;
+}
+
+a{
+  color: #316fea;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: .85rem;
+}
+
+.container{
+  width: 25%;
+  margin: 15vh auto;
+}
+
+.form{
+  width: 100%;
+}
+
+.container__logo{
+  text-align: center;
+}
+
+.container__logo img{
+  width: 45%;
+}
+
+.container__title{
+  color: black;
+  font-size: 1.7rem;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 2.5rem;
+}
+
+.flex_column{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.div_decoration{
+  width: 45%;
+  height: 1.6px;
+  background-color: #e1e5e8;
+}
+
+.p_decoration{
+  color: #b3bac0;
+  text-transform: uppercase;
+  font-size: .8rem;
+  font-weight: 500;
+}
+
+.form__input{
+  width: 100%;
+  border: 2px solid #e1e5e8;
+  border-radius: 6px;
+  font-size: .7rem;
+  font-weight: 300;
+  padding: .55rem .4rem .55rem .4rem;
+  margin-top: .5rem;
+  outline: none;
+  box-sizing: border-box;
+}
+
+.form__label{
+  position: relative;
+  font-size: .8rem;
+  font-weight: 600;
+}
+
+.form__input::placeholder{
+  color: #b3bac0;
+}
+
+.form__input_eye{
+  position: absolute;
+  width: .9rem;
+  top: 25%;
+  right: 4%;
+}
+
+.form__input_eye_text{
+  position: absolute;
+  width: .9rem;
+  top: 75%;
+  right: 4%;
+}
+
+.form__input_eye:hover{
+  cursor: pointer;
+}
+
+.button{
+  width: 100%;
+  font-family: "Darker Grotesque", sans-serif;
+  padding: .3rem 0 .5rem 0;
+  margin-top: 1rem;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: center;
+}
+
+.form__button_theme_blue{
+  background-color: #316fea;
+  border: none;
+  color: white;
+}
+
+.form__button_theme_gray{
+  background-color: white;
+  border: 2px solid #b3bac0;
+  color: black;
+}
+
+.form__button_with_icons{
+  width: 48%;
+  font-family: "Darker Grotesque", sans-serif;
+  padding: .3rem 0 .5rem 0;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 500;
+  background-color: white;
+  border: 2px solid #e1e5e8;
+  color: black;
+}
+
+.form__button_with_icons img {
+  width: 12%;
+  margin-right: .5rem;
+}
+
+.div_password{
+  margin-top: .5rem;
+  text-align: right;
+}
+
+.div_signup{
+  display: flex;
+  justify-content: center;
+  margin-top: .6rem;
+}
+
+.div_signup p {
+  font-weight: 600;
+  font-size: .85rem;
+  margin: 0;
+  margin-right: .3rem;
+}
+
+.error_text{
+  color: red;
+  font-weight: 600;
+  font-size: .7rem;
+  text-align: center;
+}
+
+.response{
+  position: absolute;
+  top: .3rem;
+  left: 76%;
+  width: 20%;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.error_response{
+  background-color: rgb(248, 180, 180);
+  border: 2px solid rgb(193, 26, 0);
+}
+
+.error_response p{
+  color: rgb(193, 26, 0);
+  font-weight: 500;
+}
+
+.successful_response{
+  background-color: rgb(221, 248, 180);
+  border: 2px solid rgb(71, 111, 0);
+}
+
+.successful_response p{
+  color: rgb(71, 111, 0);
+  font-weight: 500;
+}
+
+
+@media screen and (max-width: 1199px){
+  :root{
+    font-size: 18px;
+  }
+
+  .container {
+    width: 30%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .container {
+    width: 50%;
+  }
+
+  .response {
+    left: 60%;
+    width: 35%;
+  }
+}
+
+@media screen and (max-width: 600px){
+  :root{
+    font-size: 14px;
+  }
+
+  .container{
+    width: 85%;
+  }
+
+  .response{
+    left: 55%;
+    width: 40%;
+  }
 }
